K8s/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: nikhilesh2701/mern-app-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
