K8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: mern-app
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
